samples/_failures_safe/1761560921_00f812_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7c96371.c: In function ‘main’:
./samples/SAFE/__tmp_f7c96371.c:149:5: error: expected declaration or statement at end of input
  149 |     }
      |     ^
